--- a/bpStyle.css
+++ b/bpStyle.css
@@ -1,18 +1,46 @@
 #screen {
-	position: absolute;
-	margin-right: auto;
-	margin-left: auto;
-	left: 0;
-	right: 0;
 	margin-top: 100px;
+	margin-left: 300px;
+	float: left;
 	height: 600px;
 	width:  1000px;
 	border: 5px solid black;
 }
 
 #gameZone {
-	float: left; 
+	position: fixed;
+	top: 50%
+	left: 50%;
 	margin-top: -75px;
+	display: inline-block;
+}
+
+#gameInfo {
+	display: inline-block;
+	border: 5px solid black;
+	height: 600px;
+	width: 200px;
+	margin-left: 10px;
+	margin-top: 100px;
+	float: right;
+	text-align: center;
+	font-size: 20px;
+}
+
+#directions {
+	margin-top: 125px;
+}
+
+#deathScreen {
+	position: fixed;
+	top: 30%;
+	left: 35%;
+	width: 400px;
+	height: 200px;
+	z-index: 10;
+	text-align: center;
+	font-size: 30px;
+	font-weight: bold;
 }
 
 footer {
